--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://str0ng3r.github.io/masi-studio-web/",
+  "homepage":"https://str0ng3r.github.io/masi-studio-web",
   "name": "hello-world",
   "version": "0.1.0",
   "private": true,
