--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^10.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
